# rtiow

./: .clang-format  CMakeLists.txt  CMakePresets.json  camera.cpp  camera.h  color.cpp  color.h  hittable.cpp  hittable.h  hittable_list.cpp  hittable_list.h  interval.cpp  interval.h  main.cpp  main.h  material.cpp  material.h  ray.cpp  ray.h  sphere.cpp  sphere.h  utility_functions.h  vec3.cpp  vec3.h
